<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros2_control_bolt</name>
  <version>0.0.5</version>
  <description>gazebo_ros2_control_bolt</description>

  <maintainer email="alejandro@osrfoundation.org">Alejandro Hernandez</maintainer>

  <license>BSD</license>
  <license>Apache License 2.0</license>

  <url type="website">http://ros.org/wiki/gazebo_ros_control</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros2_control/issues</url>
  <url type="repository">https://github.com/ros-simulation/gazebo_ros2_control/</url>

  <author>Olivier Stasse</author>
  <author>Maxime Fansi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_description_bolt</exec_depend>
  <exec_depend>ros2_control_test_nodes</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros2_control_bolt plugin="${prefix}/gazebo_hardware_bolt_plugins.xml"/>
  </export>
</package>
