<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>position_velocity_effort_gain_controller</name>
  <version>0.0.0</version>
  <description>position_velocity_effort_gain_controller</description>
  <maintainer email="mufansitch@laas.fr">mufansitch</maintainer>

  <license>BSD</license>
  <license>Apache License 2.0</license>

  <author>Olivier Stasse</author>
  <author>Maxime Fansi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2_hardware_interface_bolt</depend>
  <depend>odri_control_interface</depend>
  <depend>master_board_sdk</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_add_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  <test_depend>ros2_hardware_interface_bolt</test_depend>

  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_description_bolt</exec_depend>
  <exec_depend>ros2_control_test_nodes</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <position_velocity_effort_gain_controller plugin="${prefix}/position_velocity_effort_gain_controller_plugins.xml"/> -->
  </export>
</package>
